[workspace]
resolver = "2"
members = ["2023"]

[workspace.dependencies]
ahash = "0.8.2"
arrayvec = "0.7.2"
deku = "0.16.0"
hashbrown = "0.14.3"
hex = "0.4.3"
itertools = "0.12.0"
lazy_static = "1.4.0"
multimap = { version = "0.9.1", default-features = false }
num-iter = "0.1.43"
num-traits = "0.2.15"
pest = { version = "2.5.2", default-features = false }
pest_derive = "2.5.2"
regex = { version = "1.7", default-features = false, features = ["std", "unicode-perl"] }

[profile.release]
lto = "fat"
incremental = false
debug = true
