[package]
name = "aoc_2023"
authors = ["Rareș Cosma <rares@getbetter.ro>"]
version = "0.1.0"
edition = "2021"
default-run = "aoc_2023"

[dependencies]
aoc_2dmap = { path = "../aoc_prelude/aoc_2dmap" }
aoc_dijsktra = { path = "../aoc_prelude/aoc_dijsktra" }
aoc_prelude = { path = "../aoc_prelude/aoc_prelude" }
deku.workspace = true
pest.workspace = true
pest_derive.workspace = true
regex.workspace = true
