[package]
name = "aoc_2023"
authors = ["Rareș Cosma <rares@getbetter.ro>"]
version = "0.1.0"
edition = "2021"
default-run = "aoc_2023"

[dependencies]
aoc_2dmap.workspace = true
aoc_prelude.workspace = true
aoc_cycles.workspace = true
aoc_dijsktra.workspace = true

pest.workspace = true
pest_derive.workspace = true
rayon.workspace = true
